# md2pptx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: leadership-demo.md  leadership-demo.pptx  weekly-business-review.pptx
examples/assets/: make_diagram.py
examples/multi/: 00-intro.md  01-metrics.md  02-risks.md
src/md2pptx/: __init__.py  builder.py  cli.py  inline.py  model.py  parser.py  renderer.py  themes.py
tests/: test_inline_themes.py  test_parser.py  test_render.py
