[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2pptx-leadership"
version = "0.1.0"
description = "Turn Markdown into leadership-grade PowerPoint (.pptx) decks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Vikrant Singh" }]
keywords = ["markdown", "powerpoint", "pptx", "presentation", "slides", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup",
]
dependencies = ["python-pptx>=0.6.21"]

[project.urls]
Homepage = "https://github.com/VikrantSingh01/md2pptx"
Repository = "https://github.com/VikrantSingh01/md2pptx"
Issues = "https://github.com/VikrantSingh01/md2pptx/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff"]

[project.scripts]
md2pptx = "md2pptx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
